@@ -14,10 +14,12 @@ import de.tudresden.inf.mci.brailleplot.datacontainers.PointList;
 import de.tudresden.inf.mci.brailleplot.datacontainers.PointListContainer;
 import de.tudresden.inf.mci.brailleplot.diagrams.LineChart;
 
+
+import de.tudresden.inf.mci.brailleplot.configparser.Representation;
+import de.tudresden.inf.mci.brailleplot.layout.PlotCanvas;
 import de.tudresden.inf.mci.brailleplot.layout.RasterCanvas;
 
 
-import de.tudresden.inf.mci.brailleplot.layout.PlotCanvas;
 
 
 import de.tudresden.inf.mci.brailleplot.printabledata.FloatingPointData;
@@ -43,6 +45,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
@@ -177,12 +180,14 @@ public final class App {
                 configPath = getClass().getResource("/config/index_everest_d_v4.properties");
                 mLogger.warn("ATTENTION! Using default specific config from resources. Please remove default config behavior before packaging the jar.");
             } else {
-                configPath = new URL(settingsReader.getSetting(SettingType.PRINTER_CONFIG_PATH).get());
+                File configFile = new File(settingsReader.getSetting(SettingType.PRINTER_CONFIG_PATH).get());
+                configPath = configFile.toURL();
             }
 
             JavaPropertiesConfigurationParser configParser = new JavaPropertiesConfigurationParser(configPath, getClass().getClassLoader().getResource("config/default.properties"));
             Printer indexV4Printer = configParser.getPrinter();
             Format a4Format = configParser.getFormat("A4");
+            Representation representationParameters = configParser.getRepresentation();
 
 
             // Parse csv data
@@ -198,7 +203,7 @@ public final class App {
             lineChart.setTitle("Liniendiagramm");
             lineChart.setXAxisName("X-Achsen Einheit");
             lineChart.setYAxisName("Y-Achsen Einheit");
-            MasterRenderer renderer = new MasterRenderer(indexV4Printer, a4Format);
+            MasterRenderer renderer = new MasterRenderer(indexV4Printer, representationParameters, a4Format);
             RasterCanvas canvas = renderer.rasterize(lineChart);
             Iterator<MatrixData<Boolean>> iter = canvas.getPageIterator();
             SimpleMatrixDataImpl<Boolean> mat = (SimpleMatrixDataImpl<Boolean>) canvas.getCurrentPage();
@@ -219,7 +224,7 @@ public final class App {
             svgExporter.dump("boolMat");
 
             // FloatingPointData SVG exporting example
-            PlotCanvas floatCanvas = new PlotCanvas(indexV4Printer, a4Format);
+            PlotCanvas floatCanvas = new PlotCanvas(indexV4Printer, representationParameters, a4Format);
             FloatingPointData<Boolean> points = floatCanvas.getNewPage();
 
             SvgExporter<PlotCanvas> floatSvgExporter = new BoolFloatingPointDataSvgExporter(floatCanvas);
